adding project-service tests