@@ -12,6 +12,7 @@ import com.ssds.skillconnect.repository.UserRepository;
 import com.ssds.skillconnect.utils.exception.ApiRequestException;
 import com.ssds.skillconnect.utils.helper.Mapper;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.java.Log;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -19,9 +20,11 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Log
 public class ProjectService {
 
     private final ProjectRepository projectRepo;
@@ -47,9 +50,13 @@ public class ProjectService {
 
             Pageable pageable = PageRequest.of(pageNumber, pageSize);
 
-            Page<ProjectRowResponseModel> projectRowResponseModelPage = projectRepo.findAll(
-                    pageable
-            ).map(
+            Page<Project> listOfProjects = projectRepo.findAll(pageable);
+
+            if(listOfProjects == null || listOfProjects.isEmpty()) {
+                throw new ApiRequestException("No projects found");
+            }
+
+            Page<ProjectRowResponseModel> projectRowResponseModelPage = listOfProjects.map(
                     mapper::Project_to_ProjectRowResponseModel
             );
 
@@ -72,7 +79,7 @@ public class ProjectService {
             return projectRowResponseModelList;
 
         } catch (Exception e) {
-            throw new ApiRequestException(e.getMessage());
+            throw new ApiRequestException("something went wrong : " + e.getMessage());
         }
     }
 
@@ -96,9 +103,14 @@ public class ProjectService {
                     userId
             );
 
-            List<ProjectRowResponseModel>projectRowResponseModelList = projectRowResponseModelPage.stream().map(
-                                    mapper::Project_to_ProjectRowResponseModel
-                            ).toList();
+            if(projectRowResponseModelPage == null || projectRowResponseModelPage.isEmpty()) {
+                throw new ApiRequestException("No projects found");
+            }
+
+            List<ProjectRowResponseModel>projectRowResponseModelList = projectRowResponseModelPage
+                    .stream()
+                    .map(mapper::Project_to_ProjectRowResponseModel)
+                    .collect(Collectors.toList());
 
             projectRowResponseModelList.forEach(projectRowResponseModel -> {
                 Integer projectId = projectRowResponseModel.getProjectId();
@@ -123,7 +135,9 @@ public class ProjectService {
     }
 
 
-    public ProjectResponseModel createProject(ProjectCreateRequestModel projectCreateRequestModel, String authorizationHeader) {
+    public ProjectResponseModel createProject(
+            ProjectCreateRequestModel projectCreateRequestModel,
+            String authorizationHeader) {
         try {
             Project project = new Project();
 
@@ -151,7 +165,9 @@ public class ProjectService {
 
             project.setUsersAssignedProjectList(usersAssignedProjectList);
 
-            return mapper.Project_to_ProjectCreateResponseModel(projectRepo.save(project));
+            Project savedProject = projectRepo.save(project);
+
+            return mapper.Project_to_ProjectCreateResponseModel(savedProject);
 
         } catch (Exception e) {
             throw new ApiRequestException(e.getMessage());
@@ -257,11 +273,13 @@ public class ProjectService {
                 throw new ApiRequestException("Only project creator can view users in project");
             }
 
-            List<User> userList = userRepository.findAllUsersInProject(userId, projectId).orElseThrow( () -> new ApiRequestException("No users found in project"));
+            List<User> userList = userRepository.findAllUsersInProject(userId, projectId)
+                    .orElseThrow( () -> new ApiRequestException("No users found in project"));
 
-            return userList.stream().map(
-                    mapper::User_to_UserDetailResponseModel
-            ).toList();
+            return userList
+                    .stream()
+                    .map(mapper::User_to_UserDetailResponseModel)
+                    .collect(Collectors.toList());
 
         } catch (Exception e) {
             throw new ApiRequestException(e.getMessage());
